--- a/Women.html
+++ b/Women.html
@@ -8,7 +8,7 @@
   </head>
  <body>
     <header id="header" class="header clear" role="banner">
-    <h1>WOMEN EMPOWERMENT</h1>
+    <h1>WOMEN </h1>
   </div>
   <nav class="nav" role= "navigation">
     <ul id="menu-header" class="menu">
