added link to aboutus.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul id="menu-header" class="menu">
     <li><a href="#"><em>INSPIRATIONAL WOMEN</em></a></li>
     <li><a href="#"><em>BLOG</em></a></li>
-    <li><a href="#"><em>ABOUT US</em></a></li>
+    <li><a href="./aboutus.html"><em>ABOUT US</em></a></li>
     <li><a href="#"><em>CONTACT US</em></a></li>
     </ul>
   </nav>
